force-app/logging/objects/CoreLibs_MonitoringAlert__c/CoreLibs_MonitoringAlert__c.object-meta.xml
<CustomObject>
    <description>Alert triggered by monitoring framework.</description>
    <label>Monitoring Alert</label>
    <nameField>
        <displayFormat>MA-{0}</displayFormat>
        <label>Monitoring Alert Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Monitoring Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>