force-app/logging/objects/CoreLibs_MonitoringAlert__c/fields/AcknowledgedBy__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that acknowledged the alert.</description>
    <inlineHelpText>The user that acknowledged the alert.</inlineHelpText>
    <label>Acknowledged By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AcknowledgedMonitoringAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>