force-app/logging/objects/CoreLibs_MonitoringAlert__c/fields/AcknowledgedTime__c.field-meta.xml
<CustomField>
    <fullName>AcknowledgedTime__c</fullName>
    <description>The time at which the alert was marked as acknowledged.</description>
    <inlineHelpText>The time at which the alert was marked as acknowledged.</inlineHelpText>
    <label>Acknowledged Time</label>
    <type>DateTime</type>
</CustomField>