force-app/logging/objects/CoreLibs_MonitoringAlert__c/fields/AlertQuery__c.field-meta.xml
<CustomField>
    <fullName>AlertQuery__c</fullName>
    <description>The query ran that triggered the alert.</description>
    <inlineHelpText>The query ran that triggered the alert.</inlineHelpText>
    <label>Alert Query</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>