force-app/logging/objects/CoreLibs_MonitoringAlert__c/fields/MonitoringRule__c.field-meta.xml
<CustomField>
    <fullName>MonitoringRule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Rule that triggered the alert.</description>
    <inlineHelpText>Rule that triggered the alert..</inlineHelpText>
    <label>Salesforce Monitoring Rule</label>
    <referenceTo>CoreLibs_MonitoringRule__c</referenceTo>
    <relationshipLabel>Salesforce Monitoring Alerts</relationshipLabel>
    <relationshipName>MonitoringAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>