force-app/logging/objects/CoreLibs_MonitoringAlert__c/fields/ResolutionNotes__c.field-meta.xml
<CustomField>
    <fullName>ResolutionNotes__c</fullName>
    <description>The notes regarding the solution that led to resolution of this alert.</description>
    <inlineHelpText>The notes regarding the solution that led to resolution of this alert.</inlineHelpText>
    <label>Resolution Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>