force-app/logging/objects/CoreLibs_MonitoringAlert__c/fields/ResolutionTime__c.field-meta.xml
<CustomField>
    <fullName>ResolutionTime__c</fullName>
    <description>The time at which the alert was marked as resolved.</description>
    <inlineHelpText>The time at which the alert was marked as resolved.</inlineHelpText>
    <label>Resolution Time</label>
    <type>DateTime</type>
</CustomField>