force-app/logging/objects/CoreLibs_MonitoringAlert__c/fields/ResolvedBy__c.field-meta.xml
<CustomField>
    <fullName>ResolvedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The user that marked the alert as resolved.</description>
    <inlineHelpText>The user that marked the alert as resolved.</inlineHelpText>
    <label>Resolved By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ResolvedMonitoringAlerts</relationshipName>
    <type>Lookup</type>
</CustomField>